--- a/renpyandroid/src/main/res/values-es/strings.xml
+++ b/renpyandroid/src/main/res/values-es/strings.xml
@@ -1,11 +1,39 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Monika After Story</string>
 
-    <string-array name="languages">
-        <item>English</item>
-        <item>Español</item>
-        <item>Português</item>
-    </string-array>
+    <!-- Setup Screen Strings -->
+    <string name="setup_title">Bienvenido a Monika After Story</string>
+    <string name="setup_description">Para usar este launcher, necesitas proporcionar los archivos originales de Doki Doki Literature Club y los archivos del mod Monika After Story. Respetamos los derechos de autor y no podemos distribuir estos archivos.</string>
+    <string name="setup_step_1_title">Paso 1: Doki Doki Literature Club</string>
+    <string name="setup_step_1_desc">Descarga la versión oficial de DDLC para Windows.</string>
+    <string name="setup_step_1_url">https://ddlc.moe/</string>
+    <string name="setup_ddlc_sha256">SHA256: 2a3dd7969a06729a32ace0a6ece5f2327e29bdf460b8b39e6a8b0875e545632e</string>
+    <string name="setup_step_2_title">Paso 2: Monika After Story</string>
+    <string name="setup_step_2_desc">Descarga la versión 0.12.15 Dlx de MAS.</string>
+    <string name="setup_step_2_url">https://github.com/Monika-After-Story/MonikaModDev/releases/tag/v0.12.15</string>
+    <string name="setup_mas_filename">Objetivo: Monika_After_Story-0.12.15-Mod-Dlx.zip</string>
+    <string name="setup_mas_sha256">SHA256: 80925bccce56cc83f5a95fd2a196d1b26c755c771a7b5f853dd65b6c23caf1a1</string>
+    <string name="setup_btn_download">Descargar</string>
+    <string name="setup_btn_select_file">Seleccionar Archivo</string>
+    <string name="setup_btn_continue">Instalar y Continuar</string>
+    <string name="setup_file_selected">Seleccionado: %1$s</string>
+    <string name="setup_error_missing_files">Por favor selecciona ambos archivos ZIP para continuar.</string>
+    <string name="setup_language_label">Idioma:</string>
+    
+    <!-- Setup Progress -->
+    <string name="setup_progress_verifying">Verificando archivos...</string>
+    <string name="setup_progress_extracting_ddlc">Extrayendo DDLC...</string>
+    <string name="setup_progress_extracting_rpa">Desempaquetando archivos del juego (RPA)...</string>
+    <string name="setup_progress_extracting_mas">Instalando Monika After Story...</string>
+    <string name="setup_progress_finalizing">Finalizando instalación...</string>
+    <string name="setup_complete">¡Instalación Completada! Iniciando...</string>
+    <string name="setup_error">Error: %1$s</string>
+    <string name="setup_error_checksum">Verificación de checksum fallida para %1$s. Por favor descarga el archivo correcto.</string>
+
+    <!-- Installation Strings -->
+    <string name="installing_language_data">Instalando datos para %1$s...</string>
+    <string name="install_error">Error instalando datos: %1$s</string>
 
     <!-- File Explorer Strings -->
     <string name="import_title">Importar</string>
@@ -13,49 +41,49 @@
     <string name="import_zip">Importar ZIP</string>
     <string name="create_folder">Crear carpeta</string>
     <string name="cancel">Cancelar</string>
-    <string name="folder_name_hint">Nombre de la carpeta</string>
+    <string name="folder_name_hint">Nombre de carpeta</string>
     <string name="create">Crear</string>
     <string name="folder_already_exists">La carpeta ya existe.</string>
     <string name="folder_created">Carpeta creada.</string>
-    <string name="failed_to_create_folder">No se pudo crear la carpeta.</string>
+    <string name="failed_to_create_folder">Fallo al crear carpeta.</string>
     <string name="delete_files">Eliminar archivos</string>
-    <string name="confirm_delete_message">¿Seguro que deseas eliminar los archivos seleccionados?</string>
+    <string name="confirm_delete_message">¿Estás seguro de que quieres eliminar los archivos seleccionados?</string>
     <string name="delete">Eliminar</string>
-    <string name="export_selection_title">Exportar archivos seleccionados</string>
-    <string name="export_selection_message">Estás a punto de comprimir %1$d elementos en un archivo ZIP. ¿Continuar?</string>
+    <string name="export_selection_title">Exportar selección</string>
+    <string name="export_selection_message">Vas a comprimir %1$d elementos en un archivo ZIP. ¿Continuar?</string>
     <string name="export">Exportar</string>
     <string name="export_completed">Exportación completada.</string>
     <string name="export_error">Error de exportación: %1$s</string>
     <string name="unzipping">Descomprimiendo…</string>
     <string name="zip_imported_and_unzipped">ZIP importado y descomprimido</string>
-    <string name="error_importing_zip">Error al importar ZIP: %1$s</string>
+    <string name="error_importing_zip">Error importando ZIP: %1$s</string>
     <string name="existing_file">Archivo existente</string>
     <string name="existing_file_message">El archivo \'%1$s\' ya existe. ¿Qué quieres hacer?</string>
     <string name="overwrite">Sobrescribir</string>
     <string name="rename">Renombrar</string>
     <string name="parent_directory">..</string>
     <string name="directory_format">[%s]</string>
-    <string name="failed_to_delete_some_files">No se pudieron eliminar algunos archivos.</string>
+    <string name="failed_to_delete_some_files">Fallo al eliminar algunos archivos.</string>
     <string name="export_completed_toast">¡Exportación completada!</string>
-    <string name="export_failed_toast">Error al exportar: %s</string>
+    <string name="export_failed_toast">Fallo en exportación: %s</string>
     <string name="import_zip_default_name">importar.zip</string>
     <string name="export_zip_default_name">exportar.zip</string>
-    <string name="imported_successfully">Importado correctamente</string>
-    <string name="error_importing_folder">Error al importar carpeta: %s</string>
+    <string name="imported_successfully">Importado exitosamente</string>
+    <string name="error_importing_folder">Error importando carpeta: %s</string>
     <string name="file_imported">Archivo importado: %s</string>
-    <string name="failed_import_ignore">Error al importar. Si ves tu archivo, ignora este mensaje.</string>
+    <string name="failed_import_ignore">Fallo en importación. Si ves tu archivo ignora este mensaje.</string>
 
     <!-- LauncherActivity Strings -->
     <string name="launcher_export_title">Exportar persistente</string>
-    <string name="launcher_export_message">Esto creará un archivo ZIP con todos tus datos de guardado (persistente y otros archivos) de la carpeta de guardados externa. Se te pedirá que elijas un destino. ¿Continuar?</string>
+    <string name="launcher_export_message">Esto creará un archivo ZIP con todos tus datos guardados (persistente y otros archivos) de la carpeta externa de guardados. Se te pedirá elegir un destino. ¿Confirmar?</string>
     <string name="launcher_import_title">Importar persistente</string>
-    <string name="launcher_import_message">Esto te permitirá importar tus archivos persistentes y de guardado desde un archivo ZIP.\n\nIMPORTANTE: El ZIP debe contener los archivos (como \'persistent\') en el nivel raíz, no dentro de una carpeta. Por ejemplo: archivo.zip/persistent\n\nSe te pedirá que selecciones un archivo ZIP. ¿Continuar?</string>
-    <string name="launcher_proceed">Continuar</string>
+    <string name="launcher_import_message">Esto te permitirá importar tus archivos persistentes y guardados desde un archivo ZIP.\n\nIMPORTANTE: El ZIP debe contener los archivos (como \'persistent\') en la raíz, no dentro de una carpeta. Por ejemplo: archivo.zip/persistent\n\nSe te pedirá seleccionar un archivo ZIP. ¿Confirmar?</string>
+    <string name="launcher_proceed">Proceder</string>
     <string name="launcher_import_completed">¡Importación completada!</string>
-    <string name="launcher_import_failed">Error al importar: %s</string>
+    <string name="launcher_import_failed">Importación fallida: %s</string>
 
     <!-- Launcher Strings -->
-    <string name="launcher_start_game">Jugar</string>
+    <string name="launcher_start_game">Iniciar juego</string>
     <string name="launcher_export_button">Exportar persistente</string>
     <string name="launcher_import_button">Importar persistente</string>
     <string name="launcher_browse_internal">Explorar archivos internos</string>
@@ -74,15 +102,15 @@
     <string name="label_export">Exportar</string>
 
     <!-- Translation Sync Strings -->
-    <string name="title_translation_sync">Sincronización con Github</string>
-    <string name="translation_checking">Revisando servidor remoto...</string>
-    <string name="translation_uptodate">Tienes la ultima versión de la traducción.</string>
-    <string name="translation_update_available">¡Actualización disponible!</string>
-    <string name="translation_updating">Actualizando...</string>
-    <string name="translation_updated">Traducción actualizada con exito.</string>
-    <string name="translation_error">Error revisando/actualizando la actualización.</string>
-    <string name="translation_sync_button">Comprobar actualizaciones</string>
-    <string name="translation_commit_info">Versión: %1$s</string>
+    <string name="title_translation_sync">Sincronización Github (TL Español)</string>
+    <string name="translation_checking">Comprobando en servidor remoto...</string>
+    <string name="translation_uptodate">La traducción está actualizada.</string>
+    <string name="translation_update_available">¡Nueva traducción disponible!</string>
+    <string name="translation_updating">Actualizando traducción...</string>
+    <string name="translation_updated">Traducción actualizada exitosamente.</string>
+    <string name="translation_error">Error comprobando/actualizando traducción.</string>
+    <string name="translation_sync_button">Buscar actualizaciones</string>
+    <string name="translation_commit_info">Ver: %1$s</string>
 
     <!-- File Operations -->
     <string name="action_copy">Copiar</string>
@@ -93,18 +121,18 @@
     <string name="clipboard_copy">Copiado al portapapeles</string>
     <string name="clipboard_cut">Cortado al portapapeles</string>
     <string name="paste_success">Archivos pegados</string>
-    <string name="paste_error">Error al pegar archivos</string>
+    <string name="paste_error">Error pegando archivos</string>
 
     <string name="status_checking_network">Comprobando red...</string>
     <string name="status_checking_updates">Buscando actualizaciones...</string>
     <string name="status_launching_game">Iniciando juego...</string>
     <string name="status_export_ready">Exportación lista</string>
-    <string name="status_import_completed">Importación completada con éxito</string>
-    <string name="error_check_updates">Error al buscar actualizaciones</string>
-    <string name="error_update_failed">Error en la actualización</string>
-    <string name="error_update_failed_launching_outdated">Error al actualizar. Iniciando versión anterior.</string>
+    <string name="status_import_completed">Importación completada exitosamente</string>
+    <string name="error_check_updates">Fallo al buscar actualizaciones</string>
+    <string name="error_update_failed">Actualización fallida</string>
+    <string name="error_update_failed_launching_outdated">Actualización fallida. Iniciando versión desactualizada.</string>
 
-    <string name="dialog_update_available_title">Actualización disponible</string>
+    <string name="dialog_update_available_title">Actualización Disponible</string>
     <string name="dialog_update_available_wifi_message">Hay una actualización disponible. ¿Descargar ahora?</string>
     <string name="dialog_update_available_mobile_message">Hay una actualización disponible. Estás usando datos móviles. ¿Quieres descargarla ahora?</string>
     <string name="action_skip">Omitir</string>
@@ -112,6 +140,14 @@
 
     <string name="settings_category_general">General</string>
     <string name="settings_category_network">Red</string>
-    <string name="settings_wifi_only_title">Actualizar solo por Wi-Fi</string>
-    <string name="settings_wifi_only_desc">Descargar traducciones solo cuando estés conectado a Wi-Fi</string>
+    <string name="settings_wifi_only_title">Actualizaciones solo Wi-Fi</string>
+    <string name="settings_wifi_only_desc">Solo descargar traducciones cuando esté conectado a Wi-Fi</string>
+
+    <!-- RPA Extraction -->
+    <string name="action_extract">Extraer</string>
+    <string name="extract_rpa_title">Extraer RPA</string>
+    <string name="confirm_extract_message">¿Quieres extraer %1$s? Esto podría tardar un poco.</string>
+    <string name="extracting">Extrayendo…</string>
+    <string name="extraction_completed">Extracción completada</string>
+    <string name="extraction_error">Error de extracción: %1$s</string>
 </resources>
