--- a/renpyandroid/src/main/res/values-pt/strings.xml
+++ b/renpyandroid/src/main/res/values-pt/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Setup Screen Strings -->
     <string name="setup_title">Bem-vindo ao Monika After Story</string>
-    <string name="setup_description">Para usar este launcher, você precisa fornecer os arquivos originais do jogo Doki Doki Literature Club e os arquivos do mod Monika After Story. Respeitamos os direitos autorais e não podemos distribuir esses arquivos.</string>
+    <string name="setup_description">Para usar este launcher, você precisa fornecer os arquivos originais do jogo Doki Doki Literature Club e os arquivos do mod Monika After Story. Respeitamos os IP Guidelines e não podemos distribuir esses arquivos.</string>
     <string name="setup_step_1_title">Passo 1: Doki Doki Literature Club</string>
     <string name="setup_step_1_desc">Baixe a versão oficial do DDLC para Windows.</string>
     <string name="setup_step_1_url">https://ddlc.moe/</string>
