update logo and app name

--- a/renpyandroid/src/main/res/values-es/strings.xml
+++ b/renpyandroid/src/main/res/values-es/strings.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Monika After Story</string>
+    <string name="app_name">MASL - An After Story launcher</string>
 
     <!-- Setup Screen Strings -->
-    <string name="setup_title">Bienvenido a Monika After Story</string>
+    <string name="setup_title">Bienvenido a MASL - An After Story launcher</string>
     <string name="setup_description">Para usar este launcher, necesitas proporcionar los archivos originales de Doki Doki Literature Club y los archivos del mod Monika After Story. Respetamos las IP Guidelines y no podemos distribuir estos archivos.</string>
     <string name="setup_step_1_title">Paso 1: Doki Doki Literature Club</string>
     <string name="setup_step_1_desc">Descarga la versión oficial de DDLC para Windows.</string>
     <string name="setup_step_1_url">https://ddlc.moe/</string>
     <string name="setup_ddlc_sha256">SHA256: 2a3dd7969a06729a32ace0a6ece5f2327e29bdf460b8b39e6a8b0875e545632e</string>
-    <string name="setup_step_2_title">Paso 2: Monika After Story</string>
+    <string name="setup_step_2_title">Paso 2: MASL - An After Story launcher</string>
     <string name="setup_step_2_desc">Descarga la versión 0.12.15 Dlx de MAS.</string>
     <string name="setup_step_2_url">https://github.com/Monika-After-Story/MonikaModDev/releases/tag/v0.12.15</string>
     <string name="setup_mas_filename">Objetivo: Monika_After_Story-0.12.15-Mod-Dlx.zip</string>
