--- a/renpyandroid/src/main/res/values/strings.xml
+++ b/renpyandroid/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Monika After Story</string>
+    <string name="app_name">MASL - An After Story launcher</string>
 
     <string-array name="languages">
         <item>English</item>
@@ -12,13 +12,13 @@
     <string name="install_error">Error installing data: %1$s</string>
 
     <!-- Setup Screen Strings -->
-    <string name="setup_title">Welcome to Monika After Story</string>
+    <string name="setup_title">Welcome to MASL - An After Story launcher</string>
     <string name="setup_description">To use this launcher, you need to provide the original Doki Doki Literature Club game files and the Monika After Story mod files. We respect IP Guidelines and cannot distribute these files.</string>
     <string name="setup_step_1_title">Step 1: Doki Doki Literature Club</string>
     <string name="setup_step_1_desc">Download the official DDLC release for Windows.</string>
     <string name="setup_step_1_url">https://ddlc.moe/</string>
     <string name="setup_ddlc_sha256">SHA256: 2a3dd7969a06729a32ace0a6ece5f2327e29bdf460b8b39e6a8b0875e545632e</string>
-    <string name="setup_step_2_title">Step 2: Monika After Story</string>
+    <string name="setup_step_2_title">Step 2: MASL - An After Story launcher</string>
     <string name="setup_step_2_desc">Download the MAS 0.12.15 Dlx version.</string>
     <string name="setup_step_2_url">https://github.com/Monika-After-Story/MonikaModDev/releases/tag/v0.12.15</string>
     <string name="setup_mas_filename">Target: Monika_After_Story-0.12.15-Mod-Dlx.zip</string>
