--- a/renpyandroid/src/main/res/values-es/strings.xml
+++ b/renpyandroid/src/main/res/values-es/strings.xml
@@ -158,6 +158,8 @@
     <string name="notification_download_complete">Descarga Completada</string>
     <string name="notification_download_failed">Descarga Fallida</string>
     <string name="notification_download_progress">Velocidad: %1$s/s • Estimado: %2$s</string>
+    <string name="setup_download_progress_full">%1$d%% • %2$s / %3$s • %4$s • ETA: %5$s</string>
+    <string name="setup_download_progress_indeterminate">%1$s • %2$s</string>
     <string name="permission_notification_title">¿Activar Notificaciones?</string>
     <string name="permission_notification_message">¿Permitir que la aplicación envíe notificaciones para mostrar el progreso de la descarga?</string>
 
