--- a/renpyandroid/src/main/res/values/strings.xml
+++ b/renpyandroid/src/main/res/values/strings.xml
@@ -164,6 +164,8 @@
     <string name="notification_download_complete">Download Complete</string>
     <string name="notification_download_failed">Download Failed</string>
     <string name="notification_download_progress">Speed: %1$s/s • ETA: %2$s</string>
+    <string name="setup_download_progress_full">%1$d%% • %2$s / %3$s • %4$s • ETA: %5$s</string>
+    <string name="setup_download_progress_indeterminate">%1$s • %2$s</string>
     <string name="permission_notification_title">Enable Notifications?</string>
     <string name="permission_notification_message">Allow the app to send notifications to show download progress and completion?</string>
 
